[BUG #8417] fixed styles for right and left alignment in IE9

--- a/framework/source/resource/qx/website/scss/ui/_tabs.scss
+++ b/framework/source/resource/qx/website/scss/ui/_tabs.scss
@@ -4,16 +4,6 @@
   padding: 0;
 }
 
-.qx-tabs-float > ul:after {
-  content: " ";
-  display: block;
-  clear: both;
-}
-
-.qx-tabs-float > ul > .qx-tabs-button {
-  float: left;
-}
-
 .qx-tabs .qx-tabs-button:first-child {
   margin-left: rem(0);
 }
@@ -84,7 +74,6 @@
   @include user-select(text);
 }
 
-
 .qx-tabs .qx-tabs-button[disabled] {
   color: $highlight-color-disabled;
 }
@@ -93,34 +82,33 @@
   text-align: center;
 }
 
-.qx-tabs-justify {
-}
-
-.qx-tabs-justify > ul {
+.qx-tabs-justify > ul,
+.qx-tabs-right > ul,
+.qx-tabs-left > ul {
   display: table-row;
 }
 
-.qx-tabs-justify > ul > .qx-tabs-button {
+.qx-tabs-justify > ul > .qx-tabs-button,
+.qx-tabs-right > ul > .qx-tabs-button,
+.qx-tabs-left > ul > .qx-tabs-button {
   display: table-cell;
-  width: 1%;
   text-align: center;
   border-bottom-color: transparent;
   position: relative;
   @include transform(translate(0,rem(1)));
 }
 
-.qx-tabs-justify > ul > .qx-tabs-button-active {
-  border-bottom: rem(1) solid $background-color;
+.qx-tabs-justify > ul > .qx-tabs-button {
+  width: 1%;
 }
 
-.qx-tabs .qx-tabs-right > ul > .qx-tabs-button {
+.qx-tabs-right ul {
   float: right;
+  margin: 0;
 }
 
-.qx-tabs .qx-tabs-right > ul > .qx-tabs-button:first-child {
-  margin-left: rem(3);
-}
-
-.qx-tabs .qx-tabs-right > ul > .qx-tabs-button:last-child {
-  margin-left: rem(0);
+.qx-tabs-right > ul:after {
+  content: " ";
+  display: block;
+  clear: both;
 }
